# tmxparser

./: .editorconfig  .gitignore  CMakeCache.txt  CMakeLists.txt
gtests/: gtests_polygon.cpp  gtests_property.cpp  gtests_tileset.cpp  gtests_tmx.cpp
include/: Tmx.h.in  TmxColor.h  TmxEllipse.h  TmxGroupLayer.h  TmxImage.h  TmxImageLayer.h  TmxLayer.h  TmxMap.h  TmxObject.h  TmxObjectGroup.h  TmxPoint.h  TmxPolygon.h  TmxPolyline.h  TmxProperty.h  TmxPropertySet.h  TmxTerrain.h  TmxTerrainArray.h  TmxText.h  TmxTile.h  TmxTileLayer.h  TmxTileOffset.h  TmxTileset.h  TmxUtil.h
include/base64/: base64.h
ios/tmxparser/DerivedData/tmxparser/: info.plist
ios/tmxparser/DerivedData/tmxparser/TextIndex/: text-filter.idx
ios/tmxparser/tmxparser.xcodeproj/: project.pbxproj
ios/tmxparser/tmxparser.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/tmxparser/tmxparser.xcodeproj/project.xcworkspace/xcuserdata/grigorysh.xcuserdatad/: WorkspaceSettings.xcsettings
ios/tmxparser/tmxparser.xcodeproj/xcuserdata/grigorysh.xcuserdatad/xcschemes/: tmxparser.xcscheme  xcschememanagement.plist
src/: TmxColor.cpp  TmxEllipse.cpp  TmxGroupLayer.cpp  TmxImage.cpp  TmxImageLayer.cpp  TmxLayer.cpp  TmxMap.cpp  TmxObject.cpp  TmxObjectGroup.cpp  TmxPoint.cpp  TmxPolygon.cpp  TmxPolyline.cpp  TmxProperty.cpp  TmxPropertySet.cpp  TmxTerrain.cpp  TmxTerrainArray.cpp  TmxText.cpp  TmxTile.cpp  TmxTileLayer.cpp  TmxTileOffset.cpp  TmxTileset.cpp  TmxUtil.cpp
src/base64/: base64.cpp
test/: test.cpp
